--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="flex flex-col md:flex-row justify-around items-center bg-gray-900 bg-opacity-70 rounded-xl p-6 mb-8 border border-gray-700 max-w-4xl mx-auto">
             <div class="text-center md:text-left mb-4 md:mb-0">
                 <p class="text-sm text-gray-400 uppercase tracking-widest">Pricing</p>
-                <p class="text-3xl font-bold text-white">$100 <span class="text-lg font-normal text-gray-300">/ 10x10 block</span></p>
+                <p class="text-3xl font-bold text-white">$0.01 <span class="text-lg font-normal text-gray-300">/ 10x10 block</span></p>
             </div>
             <div class="text-center mb-4 md:mb-0">
                 <p class="text-sm text-gray-400 uppercase tracking-widest">Pixels Sold</p>
@@ -150,8 +150,6 @@
         import { getFirestore, collection, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-storage.js";
 
-        const TEST_MODE = true;
-
         const firebaseConfig = {
             apiKey: "AIzaSyDWvf2nGpOPTLGQJ_q7qY4lCmYxw9n3JWg",
             authDomain: "themilliondollarbillboar-d003e.firebaseapp.com",
@@ -174,7 +172,7 @@
         
         const GRID_SIZE = 1000;
         const PIXEL_BLOCK_SIZE = 10;
-        const PRICE_PER_BLOCK_USD = 100.00; 
+        const PRICE_PER_BLOCK_USD = 0.01; // Test Price
         
         let usdToGbpRate = 0.80;
         let totalPriceGbp = 0;
@@ -520,20 +518,6 @@
             } catch (error) {
                 console.error("Failed to render PayPal buttons", error);
             }
-        }
-
-        if (TEST_MODE) {
-            const testButton = document.createElement('button');
-            testButton.textContent = 'Test Upload (No Payment)';
-            testButton.className = 'w-full mt-2 bg-purple-600 hover:bg-purple-500 text-white font-bold py-2 px-4 rounded-lg transition-colors';
-            testButton.onclick = () => {
-                if (!selectedFile || !document.getElementById('link-url').value || !document.getElementById('title').value) {
-                    showMessage('Please fill out all fields and upload an image.', 'error');
-                    return;
-                }
-                handlePurchase('Test User');
-            };
-            document.getElementById('paypal-button-container').after(testButton);
         }
 
         fetchExchangeRate();
