--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             apiKey: "AIzaSyDWvf2nGpOPTLGQJ_q7qY4lCmYxw9n3JWg",
             authDomain: "themilliondollarbillboar-d003e.firebaseapp.com",
             projectId: "themilliondollarbillboar-d003e",
-            storageBucket: "themilliondollarbillboar-d003e.appspot.com",
+            storageBucket: "themilliondollarbillboar-d003e.firebasestorage.app",
             messagingSenderId: "980560213272",
             appId: "1:980560213272:web:016fab11a5a467af9d5a6d"
         };
