--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         lineItems: [{ price: 'price_1P2IBARpJd97rS6lrGzE2k3u', quantity: numBlocks }],
                         mode: 'payment',
                         successUrl: `${successUrl}&pending_id=${tempId}`,
-                        metadata: { pending_id: tempId },
+                        clientReferenceId: tempId,
                         cancelUrl: cancelUrl,
                     });
 
