--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             The <span class="text-cyan-400">Million Dollar</span> Billboard
         </h1>
         <p class="mt-4 text-lg md:text-xl text-gray-400 max-w-3xl mx-auto px-4">
-            Own a piece of digital real estate. Drag on the billboard to select your space.
-        </p>
+    In celebration of the 20th anniversary of the original Million Dollar Homepage, own a piece of digital real estate.
+</p>
     </header>
 
     <main class="container mx-auto px-4">
