--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             The <span class="text-cyan-400">Million Dollar</span> Billboard
         </h1>
         <p class="mt-4 text-lg md:text-xl text-gray-400 max-w-3xl mx-auto px-4">
-    In celebration of the 20th anniversary of the original Million Dollar Homepage, own a piece of digital real estate.
+    <span class="block font-semibold text-amber-400">Celebrating the 20th Anniversary of the Original Million Dollar Homepage</span>
+    Own your piece of digital real estate.
 </p>
     </header>
 
