--- a/index.html
+++ b/index.html
@@ -113,12 +113,9 @@
             The <span class="text-cyan-400">Million Dollar</span> Billboard
         </h1>
         <div class="mt-4 flex justify-center">
-    <p class="text-lg md:text-xl text-gray-300 bg-gray-800/50 border border-amber-400/30 rounded-full px-6 py-2">
-        Celebrating the 20th Anniversary of the original Million Dollar Homepage
-    </p>
-</div>
-<p class="mt-4 text-lg md:text-xl text-gray-400 max-w-3xl mx-auto px-4">
-    Own your piece of digital real estate. Drag on the billboard to select your space.
+    <p class="mt-4 text-lg md:text-xl text-gray-400 max-w-3xl mx-auto px-4">
+    <span class="block font-semibold text-amber-400">Celebrating the 20th Anniversary of the Original Million Dollar Homepage</span>
+    Own your piece of digital real estate.
 </p>
     </header>
 
