--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
     <header class="text-center py-8 md:py-12 px-4">
         <h2 class="text-lg font-medium text-amber-400">
-            Celebrating the 20th Anniversary
+            Celebrating the 20th Anniversary of the Million Dollar Homepage
         </h2>
         <h1 class="text-4xl md:text-6xl font-black uppercase tracking-wider text-white mt-2">
             The <span class="text-cyan-400">Million Dollar</span> Billboard
         </h1>
-        <p class="mt-4 text-lg md:text-xl text-gray-400 max-w-2xl mx-auto">
-            Own a piece of digital history. Drag on the billboard to select your space and make your mark.
+        <p class="mt-4 text-lg md:text-xl text-gray-400 max-w-3xl mx-auto">
+            Own your piece of digital history. Drag on the billboard to make your mark.
         </p>
     </header>
 
